<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CatchPhrase</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="categories">Categories</string>
    <string name="start">Swipe To Start &#x2192; </string>
    <string name="swipe_start">&#x21E0; Swipe To Start &#x21E2; </string>
    <string name="zero">0</string>
    <string name="rename_team">Rename team</string>
    <string name="name_team1">name&#8230;</string>
    <string name="name_team2">name&#8230;</string>
    <string name="name_team1_hint">Team 1 name:</string>
    <string name="name_team2_hint">Team 2 name:</string>
    <string name="category">Category:</string>
    <string name="points_to_win">Points to win:</string>
    <string name="points_to_win_hint">value&#8230;</string>
    <string name="seven">7</string>
    <string name="play">Play</string>
    
    <string name="times_up">Time\'s Up!</string>
    <string name="point_to">Point to:</string>
    <string name="no_score">No score</string>
    
    <string name="game_over">Game Over!</string>
    <string name="exit">Exit</string>
    
    <string name="paused">Paused</string>
    <string name="new_game">New game</string>
    <string name="reset_score">Reset score</string>
    <string name="resume">Resume</string>

</resources>
