<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#0099cc"
    android:padding="@dimen/activity_margin" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true" >
    
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="italic|bold"
        android:layout_marginBottom="@dimen/activity_margin" />
    
    <EditText
        android:id="@+id/edit_team_one_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_team1"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:inputType="textCapWords"
        android:singleLine="true"
        android:layout_marginBottom="@dimen/list_item_margin" />
    
    <EditText
        android:id="@+id/edit_team_two_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_team2"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:inputType="textCapWords"
        android:singleLine="true"
        android:layout_marginBottom="@dimen/list_item_margin" />
    
    <TextView
        android:id="@+id/category_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="20sp"
        android:textColor="@color/white" />
    
    <Spinner
        android:id="@+id/categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/categories"
        android:layout_marginBottom="@dimen/list_item_margin" />
    
    <TextView
        android:id="@+id/points_to_win_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points_to_win"
        android:textSize="20sp"
        android:textColor="@color/white" />
    
    <EditText
        android:id="@+id/edit_score_to_win"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/points_to_win_hint"
        android:inputType="number"
        android:textColor="@color/white"
        android:singleLine="true"
        android:textSize="20sp"
        android:layout_marginBottom="@dimen/list_item_margin" />
    
    </LinearLayout>
    
    <Button
        android:id="@+id/start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:text="@string/play"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
    
</RelativeLayout>
