<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/medium_blue"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin" >

    <com.cs185.catchphrase.OutlineTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:gravity="center"
        android:text="@string/paused"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="italic|bold" />
    
    <Button
        android:id="@+id/new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_item_margin"
        android:background="@drawable/btn_general"
        android:padding="@dimen/activity_margin"
        android:singleLine="true"
        android:text="@string/new_game"
        android:textColor="@drawable/btn_text_color"
        android:textSize="20sp" />
    
    <Button
        android:id="@+id/reset_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_item_margin"
        android:background="@drawable/btn_general"
        android:padding="@dimen/activity_margin"
        android:singleLine="true"
        android:text="@string/reset_score"
        android:textColor="@drawable/btn_text_color"
        android:textSize="20sp" />

    <Button
        android:id="@+id/resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_item_margin"
        android:background="@drawable/btn_general"
        android:padding="@dimen/activity_margin"
        android:singleLine="true"
        android:text="@string/resume"
        android:textColor="@drawable/btn_text_color"
        android:textSize="20sp" />

</LinearLayout>